--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button type="button" class="btn btn-create" style="font-size: 20px;">Create Post</button>
 
             <div class="collapse navbar-collapse justify-content-center" >
-                <img src="/craigslistlogo.png" width="200px" height="40px" class="d-inline-block" alt="">
+                <img src="craigslistlogo.png" width="200px" height="40px" class="d-inline-block" alt="">
                 <p class="" style="color: purple; font-size: 36px; font-family:'Times New Roman', Times, serif">
                     :providence </p>
                 </img>
@@ -42,23 +42,23 @@
     <div class="container-fluid">
         <div class="text-center col">
             <button type="button" class="btn btn-primary btn-circle btn-xl">
-                <img src="/Jobs.png"></button>
+                <img src="Jobs.png"></button>
             <button type="button" class="btn btn-primary btn-circle btn-xl">
-                <img src="/Housing.png"></button>
+                <img src="Housing.png"></button>
             <button type="button" class="btn btn-info btn-circle btn-xl">
-                <img src="/Community.png"></button>
+                <img src="Community.png"></button>
             <button type="button" class="btn btn-primary btn-circle btn-xl">
-                <img src="/Services.png"></button>
+                <img src="Services.png"></button>
         </div>  
     <div class="text-center col">
             <button type="button" class="btn btn-primary btn-circle btn-xl">
-                <img src="/Forums.png"></button>
+                <img src="Forums.png"></button>
             <button type="button" class="btn btn-primary btn-circle btn-xl">
-                <img src="/Resumes.png"></button>
+                <img src="Resumes.png"></button>
             <button type="button" class="btn btn-info btn-circle btn-xl">
-                <img src="/Gigs.png"></button>
+                <img src="Gigs.png"></button>
             <button type="button" class="btn btn-primary btn-circle btn-xl">
-                <img src="/Sale.png"></button>
+                <img src="Sale.png"></button>
     </div>
     
     </div>
